adiciona app.js e modifica index.html na resolução do desafio 4

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="container">
         <button onclick="consoleClicado()" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
+        <button onclick="alerta()" class="button">Alert</button>
         <button onclick="" class="button">Prompt</button>
         <button onclick="" class="button">Soma</button>
     </main>
