--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="container">
         <button onclick="consoleClicado()" class="button">Console</button>
         <button onclick="alerta()" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
+        <button onclick="perguntarCidadeDoBrasil()" class="button">Prompt</button>
         <button onclick="" class="button">Soma</button>
     </main>
 
