--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="consoleClicado()" class="button">Console</button>
         <button onclick="alerta()" class="button">Alert</button>
         <button onclick="perguntarCidadeDoBrasil()" class="button">Prompt</button>
-        <button onclick="" class="button">Soma</button>
+        <button onclick="somarDoisNumeros()" class="button">Soma</button>
     </main>
 
       <script src="app.js"></script>
