--- a/desafio-pratico.html
+++ b/desafio-pratico.html
@@ -6,6 +6,6 @@
     <title>Desafio Prático Alura ONE</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="desafio-1.js"></script>
 </body>
 </html>
