--- a/desafio-pratico.html
+++ b/desafio-pratico.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio Prático Alura ONE</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1></h1>
+    <p></p>
     <script src="desafio-1.js"></script>
 </body>
 </html>
